@@ -1,7 +1,9 @@
 current:
+  * cleanup and expose ZBarHelpController
   * expose enable for reader capture processing
   * workaround iOS 4.2 hang
     - update to use latest SDK
+  * add support for Code 93 symbology
 
 version 1.0:
   * update to SDK 4.1, clean out LLVM warnings
